# reddit-consensus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ask_reddit.py  pyproject.toml  test_parallel.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
evals/: README.md
evals/datasets/: ask_subreddits_complete.txt
evals/notebooks/: data_exploration.py
evals/processed/: curated_questions_2.json  reddit_2016_filtered.parquet  reddit_2016_filtered_2.parquet
evals/scripts/: list_ask_subreddits.py  question_curator.py  test_single_post.py
lesson_1/: agent_patterns.ipynb  will_brown_agent_patterns_alpha.md
lesson_2/: prod_agents.ipynb
lesson_3/: evals_optimization.ipynb
reddit_consensus/: DEVELOPMENT.md  __init__.py  agent.ipynb  agent_state.py  colors.py  config.py  prompts.py  recommender.py  test_system.ipynb  tools.py  validate_config.py
tasteful_recommender/: CLAUDE.md  __init__.py  agent.ipynb  prompts.py  recommender.py  test_system.ipynb  tools.py
tests/: README.md  conftest.py  pytest.ini  test_tools.py
