[project]
name = "reddit-consensus"
version = "0.1.0"
description = "Autonomous AI agent for tasteful recommendations via Reddit community analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "openai>=1.88.0",
    "requests>=2.31.0",
    "praw>=7.7.1",
    "asyncpraw>=7.7.1",
]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = false
